Fri Jan 21 08:42:19 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/ORB.cpp (ORB_init):

	  Reverted change that stored return value
	  TAO_default_environment() in a reference to a
	  CORBA::Environment.  MSVC++ 6 couldn't grok it.

Fri Jan 21 10:11:29 2005  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/tests/FT_App/FT_App.mpc:

          Corrected a typo in the 'after' setting.

Fri Jan 21 09:50:40 2005  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/examples/ImR/Combined_Service/run_test.pl:

          Changed the final TerminateWaitKill()'s to Kill()'s as I should
          have done originally.

Fri Jan 21 13:30:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/Event/RT_Task.cpp:
          Added needed include for Solaris 10 build

Fri Jan 21 13:19:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Strategies/SHMIOP_Acceptor.cpp:
          When ORBDottedDecimalAddresses is set to 1, then also respect
          this for SHMIOP. The endpoint created then also contains the
          ip address instead of the hostname. This is the same behaviour
          as for IIOP. On Windows we default to using ip addresses because
          DNS is often broken on Windows systems, SHMIOP didn't respected
          this behaviour which caused test failures on our Windows build
          systems at the moment our DNS server was crashed. This fixes
          bugzilla bug [2033].

Fri Jan 21 12:17:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Strategies/SHMIOP_Connector.cpp:
          Improved debug messages to make formatting consistent
          and give a little more info what the problem is.

Thu Jan 20 17:23:27 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * orbsvcs/orbsvcs/CosConcurrency.mpc:
        * orbsvcs/orbsvcs/CosEvent.mpc:
        * orbsvcs/orbsvcs/CosLifeCycle.mpc:
        * orbsvcs/orbsvcs/CosLoadBalancing.mpc:
        * orbsvcs/orbsvcs/CosNaming.mpc: